# writing_great_libraries_cppcon_2015

./: CMakeLists.txt  README.md  index.html
presentation/: CMakeLists.txt  disassembly.txt  index.html.in  outline
presentation/code_sampler/: CMakeLists.txt
presentation/code_samples/: aliasing.cpp  filter_copy_if.cpp  foo.ipp  generic_code.cpp  ipp_pattern.cpp  iterator.cpp  least_surprise.cpp  lib_samples.cpp  parameter_evaluation_order.cpp  range.cpp  range_based_for_adapter.cpp  saxpy.cpp  template.cpp  test.cpp  ui.cpp
presentation/css/: reveal.css
